imperative equivalent versions